UI admin finish

--- a/src/server/website/Consulta.html
+++ b/src/server/website/Consulta.html
@@ -11,10 +11,10 @@
     <body>
         <section class= "form-adminOpts">
             <h5>Consultas de Administrador</h5>
-            <input class="buttons" type="submit" id="peopleBtn" value="Propiedades de Propietario" onclick="propPropi();">
-            <input class="buttons" type="submit" id="UserBtn" value="Propietario de Propiedad" onclick="usr();">
-            <input class="buttons" type="submit" id="propertyBtn" value="Propiedades Visibles" onclick="property();">
-            <input class="buttons" type="submit" id="pplxprop" value="Usuarios de Propiedad" onclick="asocP();">
+            <input class="buttons" type="submit" id="propiedadPropietario" value="Propiedades de Propietario" onclick="propPropi();">
+            <input class="buttons" type="submit" id="propietarioPropiedad" value="Propietario de Propiedad" onclick="propietarioProp();">
+            <input class="buttons" type="submit" id="propVisible" value="Propiedades Visibles" onclick="propVisible();">
+            <input class="buttons" type="submit" id="usuarioPropiedad" value="Usuarios de Propiedad" onclick="userProp();">
             <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
         </section>
 
