--- a/src/server/website/index.html
+++ b/src/server/website/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>MunITEC</title>
+        <title>MunITCR</title>
         <link rel="stylesheet" href="css/index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js/index.js"></script>
     </head>
     <body>
         <section class= "form-login">
-            <h5>MunITEC</h5>
+            <h5>MunITCR</h5>
             <input class="controls" type="text" id="usuario" value="" placeholder="Usuario">
             <input class="controls" type="password" id="contrasena" value="" placeholder="Contraseña">
             <section>
