--- a/src/server/website/propPropi.html
+++ b/src/server/website/propPropi.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MunITEC</title>
+  <title>MunITCR</title>
   <link rel="stylesheet" href="css/listaUsuarios.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 <header class="container-fluid">
   <div class="row align-items-center" style="background-color: #017bab;">
     <div class="col" style="text-align: left;">
-      <input class="buttons" type="submit" id="githubBtn" value="MunITEC" style="font-weight: bold;" onclick="window.location.href='https://github.com/valeriehernandez-7/MunITEC';">
+      <input class="buttons" type="submit" id="githubBtn" value="MunITCR" style="font-weight: bold;" onclick="window.location.href='https://github.com/valeriehernandez-7/MunITCR';">
     </div>
     <div class="col-md-auto">
       <input class="buttons" type="submit" id="backBTN" value="Propietarios" style="font-weight: bold;" onclick="ret();">
@@ -66,7 +66,7 @@
   <!-- Copyright -->
   <p style="color:#FFFFFF; text-align: center;">
     <br>
-    <b>&copy; 2022 ✦ MunITEC</b><br>
+    <b>&copy; 2022 ✦ MunITCR</b><br>
     <b href="https://github.com/efmz200">Erick F. Madrigal Zavala</b><br>
     <b href="https://github.com/valeriehernandez-7">Valerie M. Hernández Fernández</b>
   </p>
