login in api and website

--- a/src/server/website/index.html
+++ b/src/server/website/index.html
@@ -13,8 +13,8 @@
             <input class="controls" type="text" id="usuario" value="" placeholder="Usuario">
             <input class="controls" type="password" id="contrasena" value="" placeholder="Contraseña">
             <section>
-              <input class="buttons" type="submit" id="logBtn" value="Iniciar Sesión" onclick="login();">
-              <input class="buttons" type="submit" id="admBtn" value="Admin" onclick="loginAdmin();">
+              <input class="buttons" type="submit" id="logBtn" value="Iniciar Sesión" onclick="login(0);">
+              <input class="buttons" type="submit" id="admBtn" value="Admin" onclick="login(1);">
             </section>
         </section>
 
