--- a/src/server/website/PropiedadesEdit.html
+++ b/src/server/website/PropiedadesEdit.html
@@ -19,7 +19,7 @@
             <input class="controls" type="number" id="price" value="" placeholder="Valor de la propiedad" step="any">
             <input class="controls" type="date" id="date" value = "2000-09-09" step="any">
             <section>
-              <input class="buttons" type="submit" id="addBtn" value="Agregar Propiedades" onclick="add();">
+              <input class="buttons" type="submit" id="upBtn" value="Actualizar Propiedad" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
