--- a/src/server/website/UsuarioEdit.html
+++ b/src/server/website/UsuarioEdit.html
@@ -32,7 +32,7 @@
             </section>
             <!--<select class="controls" name="categorias" id="categorias"><option value="Categoria">Categoría</option></select>-->
             <section>
-              <input class="buttons" type="submit" id="addBtn" value="Agregar usuario" onclick="add();">
+              <input class="buttons" type="submit" id="upBtn" value="Actualizar usuario" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
