--- a/src/server/website/listaUsuarios.html
+++ b/src/server/website/listaUsuarios.html
@@ -15,34 +15,23 @@
       <input class="buttons" type="submit" id="githubBtn" value="MunITCR" style="font-weight: bold;" onclick="window.location.href='https://github.com/valeriehernandez-7/MunITCR';">
     </div>
     <div class="col-md-auto">
-      <input class="buttons" type="submit" id="backBTN" value="USUARIOS" style="font-weight: bold;" onclick="ret();">
+      <input class="buttons" type="submit" id="backBTN" value="Opciones de Administrador" style="font-weight: bold;" onclick="ret();">
     </div>
     <div class="col" style="text-align: right;">
       <input class="buttons" type="submit" id="logOutBtn" value="SALIR" style="font-weight: bold;" onclick="cerrar();">
     </div>
+    <section class="container-fluid" style="display: flex; justify-content: center;">
+      <p style="color:#FFFFFF; text-align: center;">
+        <b>Listado de Usuarios</b><br>
+      </p>
+    </section>
   </div>
 </header>
 <body style="background-color: #b4c5cd;">
   <br><br><br>
   <div class="container-fluid" style="display: flex; justify-content: center;">
-    <!--
-    <section class="filt">
-      <input class="controls" type="text" id="desc" value="" placeholder="DESCRIPCIÓN">
-      <input class="buttons" type="submit" id="descBtn" value="Filtrar por Descripción" onclick="descfil();">
-    </section>
-    <section class="filt" style="padding-left: 1em;">
-      <select class="controls" id="cat"></select>
-      <input class="buttons" type="submit" id="catBtn" value="Filtrar por Categoría" onclick="catfil();">
-    </section>
-    <section class="filt" style="padding-left: 1em;">
-      <input class="controls" type="number" id="cant" min='1' value="" placeholder="CANTIDAD">
-      <input class="buttons" type="submit" id="catBtn" value="Mostrar Cantidad" onclick="cant();">
-    </section>
-    -->
-  </div>
-  <div class="container-fluid" style="display: flex; justify-content: center;">
     <section>
-      <input class="buttons" type="submit" id="addBtn" value="Añadir Usuario" onclick="add();">
+      <input class="buttons" type="submit" id="addBtn" value=" Añadir Usuario " onclick="add();">
     </section>
   </div>
   <br>
@@ -51,17 +40,20 @@
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
 
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">ID Persona</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Contraseña</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Admin</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Activo 2</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Usuario</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Operaciones</th>
       <tr class="linea" id="1">
-        <td>231</td>
-        <td>Pedrito</td>
+        <td>Vale</td>
+        <td>Lacrack</td>
         <td>contrasena</td>
-        <td>si</td>
-        <td>si</td>
+        <td>Regular</td>
+        <td>
+          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('Vale','Lacrack','contrasena','Regular');">
+          <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
+        </td>
       </tr>
       <tbody id="tableBody"></tbody>
     </table>
