more website changes

--- a/src/server/website/PerXPropEdit.html
+++ b/src/server/website/PerXPropEdit.html
@@ -19,7 +19,7 @@
 
 
             <section>
-              <input class="buttons" type="submit" id="addBtn" value="Agregar usuario" onclick="add();">
+              <input class="buttons" type="submit" id="upBtn" value="Actualizar usuario" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
