--- a/src/server/website/UsuarioEdit.html
+++ b/src/server/website/UsuarioEdit.html
@@ -12,7 +12,7 @@
         <section class= "form-usuario">
             <h5>Usuario</h5>
             Nombre
-            <input class="controls" type="text" id="idUser" value="" placeholder="Nombre">
+            <input class="controls" type="text" id="nombre" value="" placeholder="Nombre">
             Nombre de Usuario
             <input class="controls" type="text" id="user" value="" placeholder="Nombre de Usuario">
 
