--- a/src/server/website/listaPropiedades.html
+++ b/src/server/website/listaPropiedades.html
@@ -41,7 +41,6 @@
       <tr>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Uso</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo Zona</th>
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lote</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Área</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Valor fiscal</th>
@@ -51,13 +50,12 @@
       <tr class="linea" id=1>
         <td>Comercial</td>
         <td>Residencial</td>
-        <td>Lacrack</td>
         <td>32</td>
         <td>250</td>
         <td>1200</td>
         <td>2010-01-10</td>
         <td>
-          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('Comercial','Residencial','Lacrack',32,250,1200,'2010-01-10');">
+          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('Comercial','Residencial',32,250,1200,'2010-01-10');">
           <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
         </td>
       </tr>
