--- a/src/server/website/UserXpropEdit.html
+++ b/src/server/website/UserXpropEdit.html
@@ -14,9 +14,10 @@
             <input class="controls" type="text" id="usuario" value="" placeholder="Usuario">
             <input class="controls" type="number" id="lote" value="" placeholder="Numero de Lote">
             <section>
-              <input class="buttons" type="submit" id="addBtn" value="Editar" onclick="add();">
+              <input class="buttons" type="submit" id="upBtn" value=" Actualizar " onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
+
     </body>
 </html>
