--- a/src/server/website/UsersXprop.html
+++ b/src/server/website/UsersXprop.html
@@ -14,7 +14,7 @@
             <input class="controls" type="text" id="usuario" value="" placeholder="Usuario">
             <input class="controls" type="number" id="lote" value="" placeholder="Numero de Lote">
             <section>
-              <input class="buttons" type="submit" id="addBtn" value="Editar" onclick="add();">
+              <input class="buttons" type="submit" id="addBtn" value="Añadir" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
