--- a/src/server/website/listaPerXProp.html
+++ b/src/server/website/listaPerXProp.html
@@ -48,12 +48,12 @@
 
       </tr>
       <tr class="linea" id=1>
-        <td>mazae</td>
+        <td>117910310</td>
         <td>112</td>
         <td>2010-01-10</td>
-        <td>2021-01-10</td>
+        <td></td>
         <td>
-          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('mazae',112,'2010-01-10','2021-01-10');">
+          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('117910310',112);">
           <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
         </td>
       </tr>
