--- a/src/server/website/PerXProp.html
+++ b/src/server/website/PerXProp.html
@@ -11,15 +11,12 @@
     <body>
         <section class= "form-usuario">
             <h5>Persona y Propiedad</h5>
-            <input class="controls" type="text" id="nombre" value="" placeholder="ID Persona">
-            <input class="controls" type="text" id="lote" value="" placeholder="ID Propiedad">
-            <input class="controls" type="date" id="fechaI" value="" placeholder="Fecha Inicio">
-            <input class="controls" type="date" id="fechaF" value="" placeholder="Fecha Fin">
-
-
-
+            Numero de Identificación
+            <input class="controls" type="number" id="nombre" value="" placeholder="Identificación">
+            Numero de Lote
+            <input class="controls" type="number" id="lote" value="" placeholder="Lote">
             <section>
-              <input class="buttons" type="submit" id="addBtn" value="Agregar usuario" onclick="add();">
+              <input class="buttons" type="submit" id="addBtn" value="Agregar" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
             </section>
         </section>
