--- a/src/server/website/UsuarioEdit.html
+++ b/src/server/website/UsuarioEdit.html
@@ -11,8 +11,8 @@
     <body>
         <section class= "form-usuario">
             <h5>Usuario</h5>
-            Nombre
-            <input class="controls" type="text" id="nombre" value="" placeholder="Nombre">
+            Identificación
+            <input class="controls" type="number" id="nombre" value="" placeholder="Nombre">
             Nombre de Usuario
             <input class="controls" type="text" id="user" value="" placeholder="Nombre de Usuario">
 
