--- a/src/server/website/listaPerXProp.html
+++ b/src/server/website/listaPerXProp.html
@@ -40,7 +40,7 @@
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
 
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Lote</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha Asociación</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Fecha Desasociación</th>
@@ -48,12 +48,12 @@
 
       </tr>
       <tr class="linea" id=1>
-        <td>117910310</td>
+        <td>2018146983</td>
         <td>112</td>
         <td>2010-01-10</td>
         <td></td>
         <td>
-          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('117910310',112);">
+          <input class="buttons" type="submit" id="addBtn" value=" Editar " onclick="edit('2018146983',112);">
           <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
         </td>
       </tr>
