--- a/src/server/website/listaUsuarios.html
+++ b/src/server/website/listaUsuarios.html
@@ -40,12 +40,13 @@
     <table id="tablaItems" style="border: 2px solid #017bab;">
       <tr>
 
-        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Nombre</th>
+        <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Identificación</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Usuario</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Contraseña</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Tipo de Usuario</th>
         <th style="text-align:center; color: #FFFFFF; background-color: #017bab; border: 2px solid #017bab;">Operaciones</th>
-      <tr class="linea" id="1">
+      <!--
+        <tr class="linea" id="1">
         <td>Vale</td>
         <td>Lacrack</td>
         <td>contrasena</td>
@@ -55,6 +56,7 @@
           <input class="buttons" type="submit" id="addBtn" value=" Eliminar " onclick="add();">
         </td>
       </tr>
+      -->
       <tbody id="tableBody"></tbody>
     </table>
   </div>
