--- a/src/server/website/PerXPropEdit.html
+++ b/src/server/website/PerXPropEdit.html
@@ -12,9 +12,9 @@
         <section class= "form-usuario">
             <h5>Persona y Propiedad</h5>
             Numero de Identificación
-            <input class="controls" type="number" id="nombre" value="" placeholder="Identificación">
+            <select class="controls" name="nombre" id="nombre"><option value="tipo">Identificacion</option></select>
             Numero de Lote
-            <input class="controls" type="number" id="lote" value="" placeholder="Lote">
+            <select class="controls" name="lote" id="lote"><option value="tipo">Lote</option></select>
             <section>
               <input class="buttons" type="submit" id="upBtn" value="Actualizar" onclick="add();">
               <input class="buttons" type="submit" id="backBTN" value="Regresar" onclick="ret();">
