--- a/src/server/website/UsuarioEdit.html
+++ b/src/server/website/UsuarioEdit.html
@@ -12,7 +12,7 @@
         <section class= "form-usuario">
             <h5>Usuario</h5>
             Identificación
-            <input class="controls" type="number" id="nombre" value="" placeholder="Nombre">
+            <select class="controls" name="ident" id="ident"><option value="Identificacion">Identificación</option></select>
             Nombre de Usuario
             <input class="controls" type="text" id="user" value="" placeholder="Nombre de Usuario">
 
